--- a/app/src/main/res/layout/activity_change_passs_user.xml
+++ b/app/src/main/res/layout/activity_change_passs_user.xml
@@ -14,7 +14,6 @@
         android:layout_height="?attr/actionBarSize"
         android:background="#00a5ff">
 
-
         <com.romainpiel.shimmer.ShimmerTextView
             android:id="@+id/shimmer"
             android:layout_width="wrap_content"
@@ -36,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="100dp"
+            android:gravity="center"
             android:layout_marginRight="10dp"
             android:orientation="vertical">
 
@@ -94,7 +93,7 @@
             <Button
                 android:id="@+id/btnConfirmchangle"
                 android:layout_width="240dp"
-                android:layout_height="40dp"
+                android:layout_height="48dp"
                 android:layout_gravity="center"
                 android:layout_margin="40dp"
                 android:background="@drawable/login_button_bk"
