--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -282,7 +282,9 @@
 
                         <Button
                             android:id="@+id/btnRegister"
-                            style="@style/loginButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="48dp"
+                            android:background="@drawable/login_button_bk"
                             android:layout_gravity="center"
                             android:layout_marginTop="15dp"
                             android:textSize="18dp"
