--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -95,33 +95,38 @@
         android:background="@drawable/bg_vanchuyen"
         android:orientation="vertical">
 
-        <CheckBox
-            android:id="@+id/iv_tick_tk"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:buttonTint="#00a5ff"
-            android:layout_alignParentRight="true"
-            android:layout_marginStart="70dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_toRightOf="@+id/tv_tk"
-            android:checked="false" />
+        <LinearLayout
+            android:id="@+id/linertk"
+            android:weightSum="10"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_tk"
-            android:textColor="#000000"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="Tiếp kiệm"
-            android:textStyle="bold" />
+            <TextView
+                android:layout_weight="9"
+                android:id="@+id/tv_tk"
+                android:textColor="#000000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="Tiếp kiệm"
+                android:textStyle="bold" />
+            <CheckBox
+                android:layout_weight="1"
+                android:id="@+id/iv_tick_tk"
+                android:layout_width="20dp"
+                android:layout_height="25dp"
+                android:gravity="right"
+                android:buttonTint="#00a5ff"
+                android:layout_marginRight="5dp"
+                />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tv_thoigian_tiepkiem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_tk"
+            android:layout_below="@+id/linertk"
             android:layout_marginLeft="5dp"
             android:text="Nhận hàng thời gian lâu, tiết kiệm tiền."
             android:textColor="#000000" />
@@ -133,8 +138,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="2dp"
             android:text="15.000 đ"
-            android:textColor="#FF0000"
-            />
+            android:textColor="#FF0000" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -144,33 +148,37 @@
         android:layout_weight="1"
         android:background="@drawable/bg_vanchuyen"
         android:orientation="vertical">
-
-        <CheckBox
-            android:id="@+id/iv_tick_tc"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:buttonTint="#00a5ff"
-            android:layout_alignParentRight="true"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_toRightOf="@+id/tv_tc"
-             />
-        <TextView
-            android:id="@+id/tv_tc"
-            android:textColor="#000000"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="Tiêu chuẩn"
-            android:textStyle="bold" />
+        <LinearLayout
+            android:id="@+id/linertc"
+            android:weightSum="10"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/tv_tc"
+                android:layout_weight="9"
+                android:textColor="#000000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="Tiêu chuẩn"
+                android:textStyle="bold" />
+            <CheckBox
+                android:id="@+id/iv_tick_tc"
+                android:layout_weight="1"
+                android:layout_width="20dp"
+                android:layout_height="25dp"
+                android:buttonTint="#00a5ff"
+                android:gravity="right"
+                android:layout_marginRight="5dp"
+                />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tv_thoigian_tieuchuan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tv_tc"
+            android:layout_below="@id/linertc"
             android:layout_marginLeft="5dp"
             android:text="Nhận hàng khoảng từ 3 ngày đến 5 ngày"
             android:textColor="#000000" />
