--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -30,7 +30,7 @@
         android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="6dp"
         android:weightSum="10">
 
         <ImageView
@@ -44,8 +44,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="8"
+            android:layout_weight="9"
             android:orientation="vertical">
 
             <TextView
@@ -68,12 +67,12 @@
 
     <TextView
         android:id="@+id/hinhthuc"
-        android:textColor="#000000"
-        android:layout_below="@+id/liner1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/liner1"
         android:layout_marginLeft="10dp"
         android:text="Chọn hình thức giao hàng"
+        android:textColor="#000000"
         android:textStyle="bold" />
 
     <LinearLayout
@@ -283,22 +282,24 @@
                     android:layout_height="wrap_content"
                     android:text="Thành tiền:"
                     android:textColor="#000000"
+                    android:textStyle="bold"
                     android:textSize="18dp" />
 
                 <TextView
                     android:id="@+id/txtPriceTongtienCard"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="300.000.000 VND"
+                    android:text="0 VND"
+                    android:layout_marginTop="4dp"
                     android:textColor="#FF0000"
+                    android:textStyle="normal"
                     android:textSize="18dp" />
             </LinearLayout>
 
             <Button
                 android:id="@+id/btnThanhtoanCard"
-                android:layout_width="130dp"
+                android:layout_width="120dp"
                 android:layout_height="40dp"
-                android:layout_alignParentBottom="true"
                 android:layout_gravity="center"
                 android:layout_margin="10dp"
                 android:layout_weight="2"
