--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -43,7 +43,7 @@
         android:layout_height="match_parent">
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_marginBottom="60dp"
+
         android:layout_height="match_parent">
 <!--        <TextView-->
 <!--            android:layout_width="match_parent"-->
@@ -61,25 +61,25 @@
         </androidx.recyclerview.widget.RecyclerView>
     </FrameLayout>
 
-   <LinearLayout
-       android:layout_alignParentBottom="true"
-       android:weightSum="10"
-       android:orientation="horizontal"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content">
-       <Button
-           android:id="@+id/btnLienheOrder"
-           android:layout_width="match_parent"
-           android:layout_height="48dp"
-           android:background="@drawable/bg_trangthaidonhang"
-           android:gravity="center"
-           android:text="Liên hệ"
-           android:layout_marginLeft="25dp"
-           android:layout_marginRight="25dp"
-           android:textColor="#ffffff"
-           android:textAllCaps="false"
-           android:textSize="18dp"
-            />
-   </LinearLayout>
+<!--   <LinearLayout-->
+<!--       android:layout_alignParentBottom="true"-->
+<!--       android:weightSum="10"-->
+<!--       android:orientation="horizontal"-->
+<!--       android:layout_width="match_parent"-->
+<!--       android:layout_height="wrap_content">-->
+<!--       <Button-->
+<!--           android:id="@+id/btnLienheOrder"-->
+<!--           android:layout_width="match_parent"-->
+<!--           android:layout_height="48dp"-->
+<!--           android:background="@drawable/bg_trangthaidonhang"-->
+<!--           android:gravity="center"-->
+<!--           android:text="Liên hệ"-->
+<!--           android:layout_marginLeft="25dp"-->
+<!--           android:layout_marginRight="25dp"-->
+<!--           android:textColor="#ffffff"-->
+<!--           android:textAllCaps="false"-->
+<!--           android:textSize="18dp"-->
+<!--            />-->
+<!--   </LinearLayout>-->
     </RelativeLayout>
 </LinearLayout>
