--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_margin="5dp"
     android:layout_marginTop="5dp"
     android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
-        app:cardCornerRadius="14dp"
-        app:cardBackgroundColor="#BBE2F5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+<!--    <androidx.cardview.widget.CardView-->
+<!--        app:cardCornerRadius="14dp"-->
+<!--        app:cardBackgroundColor="#BBE2F5"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content">-->
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgUSCM"
             android:layout_width="25dp"
@@ -19,41 +19,33 @@
             android:layout_marginLeft="4dp"
             android:layout_marginTop="3dp"
             android:src="@drawable/user"/>
-        <ImageView
-            android:minWidth="30dp"
-            android:layout_width="30dp"
-            android:layout_height="25dp"
-            android:layout_gravity="right"
 
-            android:layout_marginRight="2.5dp"
-            android:src="@drawable/feedbackcmt"/>
         <LinearLayout
             android:orientation="vertical"
-            android:paddingLeft="35dp"
+            android:paddingLeft="10dp"
             android:paddingRight="5dp"
             android:layout_marginBottom="3dp"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
             <TextView
                 android:id="@+id/txtTenCM"
-                android:paddingRight="30dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="anh dfdg"
                 android:textColor="#000000"
                 android:textSize="15dp"
-                android:textStyle="bold" />
+                android:textStyle="bold|italic" />
             <TextView
-
                 android:id="@+id/txtSTT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="san pham chan nam "
+                android:textStyle="normal"
                 android:textColor="#000000"
-                android:textSize="16dp"
+                android:textSize="15dp"
                 />
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+<!--    </androidx.cardview.widget.CardView>-->
 
 </LinearLayout>
