--- a/app/src/main/res/layout/item_favourite.xml
+++ b/app/src/main/res/layout/item_favourite.xml
@@ -12,10 +12,10 @@
         Card_View:cardElevation="5dp"
         >
         <ImageView
-            android:id="@+id/btnlikesp"
+            android:id="@+id/imgdeletefavourite"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/like"
+            android:src="@drawable/removefavourite"
             android:layout_margin="5dp"
             android:layout_gravity="right"
             android:layout_weight="1"
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
-                android:id="@+id/imgSanpham"
+                android:id="@+id/imgSanphamfavourite"
                 android:src="@drawable/iphone13"
                 />
 
@@ -46,16 +46,16 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/txttenSP"
+                    android:id="@+id/txttenfavourite"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
                     android:textSize="16dp"
                     android:textStyle="bold"
                     android:text="IPHONE 12 PRO "
                     android:textColor="#000000"
-                     />
+                    />
                 <TextView
-                    android:id="@+id/txtGiasp"
+                    android:id="@+id/txtGiafavourite"
                     android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -65,13 +65,13 @@
                     />
 
             </LinearLayout>
-<!--            <View-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="1dp"-->
-<!--                android:background="#888888"-->
-<!--                android:layout_marginLeft="5dp"-->
-<!--                android:layout_marginRight="5dp"-->
-<!--                />-->
+            <!--            <View-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="1dp"-->
+            <!--                android:background="#888888"-->
+            <!--                android:layout_marginLeft="5dp"-->
+            <!--                android:layout_marginRight="5dp"-->
+            <!--                />-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
@@ -89,23 +89,23 @@
                     android:textColor="#ffffff"
                     android:gravity="center"
                     />
-<!--                <ImageView-->
-<!--                    android:id="@+id/btnCardsp"-->
-<!--                    android:layout_width="20dp"-->
-<!--                    android:layout_height="20dp"-->
-<!--                    android:layout_marginStart="10dp"-->
-<!--                    android:layout_toEndOf="@+id/like"-->
-<!--                    android:src="@drawable/cart1"-->
-<!--                    android:layout_weight="1"-->
-<!--                    />-->
-<!--                <ImageView-->
-<!--                    android:layout_width="20dp"-->
-<!--                    android:layout_height="20dp"-->
-<!--                    android:src="@drawable/like"-->
-<!--                    android:layout_alignParentEnd="true"-->
-<!--                    android:id="@+id/btnlikesp"-->
-<!--                    android:layout_weight="1"-->
-<!--                    />-->
+                <!--                <ImageView-->
+                <!--                    android:id="@+id/btnCardsp"-->
+                <!--                    android:layout_width="20dp"-->
+                <!--                    android:layout_height="20dp"-->
+                <!--                    android:layout_marginStart="10dp"-->
+                <!--                    android:layout_toEndOf="@+id/like"-->
+                <!--                    android:src="@drawable/cart1"-->
+                <!--                    android:layout_weight="1"-->
+                <!--                    />-->
+                <!--                <ImageView-->
+                <!--                    android:layout_width="20dp"-->
+                <!--                    android:layout_height="20dp"-->
+                <!--                    android:src="@drawable/like"-->
+                <!--                    android:layout_alignParentEnd="true"-->
+                <!--                    android:id="@+id/btnlikesp"-->
+                <!--                    android:layout_weight="1"-->
+                <!--                    />-->
 
             </LinearLayout>
 
