--- a/app/src/main/res/layout/dialog_change_pass.xml
+++ b/app/src/main/res/layout/dialog_change_pass.xml
@@ -13,21 +13,23 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:hint="Nhập mật khẩu"
-        app:hintTextAppearance="@style/textinputsize"
-        app:passwordToggleEnabled="true"
+        app:boxCornerRadiusBottomEnd="8dp"
+        app:boxCornerRadiusBottomStart="8dp"
+        app:boxCornerRadiusTopEnd="8dp"
+        app:boxCornerRadiusTopStart="8dp"
         app:boxStrokeColor="#00a5ff"
         app:boxStrokeWidth="1dp"
         app:boxStrokeWidthFocused="1.5dp"
-        >
+        app:hintTextAppearance="@style/textinputsize"
+        app:passwordToggleEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtPasswordchange"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:textSize="18dp"
             android:textColor="@color/black"
-            />
+            android:textSize="18dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 </RelativeLayout>
