--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -7,45 +7,79 @@
     android:layout_marginTop="5dp"
     android:layout_height="wrap_content">
 
-<!--    <androidx.cardview.widget.CardView-->
-<!--        app:cardCornerRadius="14dp"-->
-<!--        app:cardBackgroundColor="#BBE2F5"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content">-->
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imgUSCM"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="3dp"
-            android:src="@drawable/user"/>
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imgUSCM"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="3dp"
+        android:src="@drawable/user"/>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:paddingLeft="10dp"
+        android:layout_marginBottom="3dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
         <LinearLayout
-            android:orientation="vertical"
-            android:paddingLeft="10dp"
-            android:paddingRight="5dp"
-            android:layout_marginBottom="3dp"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            android:weightSum="10"
+            android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/txtTenCM"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="anh dfdg"
+                android:layout_weight="10"
+                android:text="anh dfdg ffff "
                 android:textColor="#000000"
                 android:textSize="15dp"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/txtstart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="sao"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="55dp"
+                android:textColor="#00a5ff"
+                android:textSize="13dp"
                 android:textStyle="bold|italic" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:weightSum="10"
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/txtSTT"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="san pham chan "
+                android:textStyle="normal"
+                android:layout_weight="10"
+                android:layout_marginRight="0dp"
+                android:textColor="#000000"
+                android:textSize="14dp"
+                />
+            <RatingBar
+                android:id="@+id/ratingbarADT"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="san pham chan nam "
-                android:textStyle="normal"
-                android:textColor="#000000"
-                android:textSize="15dp"
+                android:numStars="5"
+                android:progressTint="#00a5ff"
+                style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
                 />
+
         </LinearLayout>
-<!--    </androidx.cardview.widget.CardView>-->
+    </LinearLayout>
+
 
 </LinearLayout>
